--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -23,7 +23,17 @@ This process cannot be used to upgrade a {productname} Proxy that was registered
 
 Before you can update your proxy, you will need an autoinstallation distribution, and an autoinstallation profile.
 The distribution must be based on {sle}{nbsp}15 SP1, because {productname}{nbsp}4 is part of the {sle}{nbsp}15 SP1 product family.
-You will require {sle}{nbsp}15 SP1 installation media.
+
+
+.Procedure: Preparing Installation Media
+. On the {productname} Server, create a local directory for the SLE{nbsp}15 installation media.
+. Download an ISO image with the installation sources, and mount the ISO image on your server:
++
+----
+mkdir /mnt/sle15
+mount -o loop DVD1.iso /mnt/sle15
+----
+
 
 .Procedure: Creating an Autoinstallation Distribution
 
@@ -33,7 +43,6 @@ You will require {sle}{nbsp}15 SP1 installation media.
 Use only letters, numbers, hyphens (``-``), periods  (``.``), and underscores (``_``), and ensure the name is longer than four characters.
 * In the [guimenu]``Tree Path`` field, type an absolute path to the installation source.
 * In the [guimenu]``Base Channel`` field, select [systemitem]``SLE-Product-SUSE-Manager-Proxy-4.0-Pool for x86_64``.
-This channel is used as the package source for non-{suse} installations.
 * In the [guimenu]``Installer Generation`` field, select [systemitem]``SUSE Linux Enterprise 15``.
 * In the [guimenu]``Kernel Options`` field, type any options to be passed to the kernel when booting for the installation.
 The [option]``install=`` parameter and the [option]``self_update=0 pt.options=self_update`` parameter are added by default.
