--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -66,7 +66,7 @@ If multiple IP addresses are available, ensure you specify the correct one.
 
 [IMPORTANT]
 ====
-Be careful when you specify the database creedentials.
+Be careful when you specify the database credentials.
 Ensure you use the same database parameters as the source system.
 Even if you intend to change it later on, the database credentials must match during migration.
 ====
@@ -138,78 +138,84 @@ While the data migration is in progress, the database services will be shut down
 This is to ensure that no data is written to the database during the migration.
 
 
-// Lana you're up to here!
+.Procedure: Migrating Data on an External Storage Device
 
+If you have package data on external storage you do not need to copy this data to the new system.
+For example, if you have an NFS mount at [path]``/var/spacewalk/packages``.
 
-[[bp.sec.mgr.migration.pkg.extern]]
-== Packages on External Storage
+Follow this procedure after migration is finished, and before you start your target system for the first time.
 
+. Open the script at [path]``/usr/lib/susemanager/bin/mgr-setup``.
+. Locate the [command]``rsync`` command on or around line 442, delete or comment it out, and save the file.
+. Ensure your external storage is mounted on the target system.
+. If [path]``/srv/www/htdocs/pub`` exists on your external storage, ensure it is mounted.
+. Start the upgraded target system for the first time, and ensure it can access your external storage device.
 
-If you have package data on external storage (for example, if you have an NFS mount at [path]``/var/spacewalk/packages``), you do not need to copy this data to the new system.
-After migration has completed, edit the script located in [path]``/usr/lib/susemanager/bin/mgr-setup`` and remove the respective [command]``rsync`` command (it will be around line 442).
-
-.Mounting External Storage
 [IMPORTANT]
 ====
-Make sure your external storage is mounted on the new system before starting the system for the first time.
-Also make sure [path]``/srv/www/htdocs/pub`` is mounted if it exists on an external storage device.
-
-All other required files and directories that have not been copied by the migration tool, should be manually copied to the new server.
+All files and directories that have not been copied by the migration tool will need to be manually copied to the new system.
 ====
 
 
+// This could probably be its own section. LKB 2019-08-22
 
-[[bp.sec.mgr.migration.trouble]]
-== Troubleshooting
+== Troubleshooting Migration
+
 This section describes some common problems found after migration.
 
 
+.{webui} Fails to Load
 
-=== {webui} Fails to Load
+Sometimes, the {webui} will not load after migration.
+This is usually caused by browser caching, if the new system has the same hostname and IP address as the old system.
+This duplication can confuse some browsers.
 
-It is possible that the {webui} may break during migration.
-This behavior is not a bug, but a browser caching issue.
-The new system has the same host name and IP address as the old system.
-This duplication can confuse some Web browsers.
-If you experience this issue reload the page.
-For example, in Firefox pressing the key combination kbd:[Ctrl+F5] should resume normal functionality.
-
-
-
-=== Not Enough Disk Space
-
-In case of trouble check available disk space.
-It is recommended to have /var/spacewalk and /var/lib/pgsql on separate (XFS) file systems.
-Make sure to remove the subvolume entry in /etc/fstab for the subvolume of /var/lib/pqsql when using a separate file system and reboot the server first before continuing.
+This issue is resolved by clearing the cache and reloading the page.
+In most browsers, you can do this quickly by pressing kbd:[Ctrl+F5].
 
 
 
-===  Corrupted Database Dump
+.Not Enough Disk Space
 
-Check the output of the following command (replace [literal]``<SUMA_3.2_MACHINE>`` with the actual host name of your 3.2 source system):
+Check the available disk space before you begin migration.
+We recommend locating [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` on separate XFS file systems.
+
+When you are setting up a separate file system, edit [path]``/etc/fstab`` and remove the [path]``/var/lib/pqsql`` subvolume.
+Reboot the server to pick up the changes.
+
+
+
+.Corrupted Database Dump
+
+If you think your database dump has been corrupted, you can check by using this command with the hostname of the source system:
 
 ----
-ssh root@<SUMA_3.2_MACHINE> "su -s /bin/bash - postgres -c exit"
+ssh root@source_hostname "su -s /bin/bash - postgres -c exit"
 ----
 
-This command must not produce any output.
-Output can lead to a corrupted transfer of the archive with the database dump. Re-visit your bash environment on the 3.2 source system (for example, the [filename]``.bashrc`` file) and make sure no extra text is printed on the shell start.
+The command will only produce output if the database has become corrupted.
+
+If the database is corrupted, check the [path]``.bashrc`` environment file on the source system.
+Ensure there is no extra text in the file at the point that the script starts the shell.
 
 
-=== Retrying to Set Up the New Server
 
-To retry setting up the new server, perform the following steps on the new server system:
+.Retrying to Set up the Target System
 
-. remove /root/.MANAGER_SETUP_COMPLETE
-. stop postgresql and remove /var/lib/pgsql/data
-. set the hostname correctly (it now has the host name from the old {productname} server)
-. correct the /etc/hosts file
-. on the new server check /etc/setup_env.sh and see if the correct database name is set:
+If you need to retry setting up the target system, follow these steps:
+
+. Delete [path]``/root/.MANAGER_SETUP_COMPLETE``.
+. Stop PostgreSQL and remove [path]``/var/lib/pgsql/data``.
+. Set the hostname.
+It should have the same hostname as the source system.
+. Check the [path]``/etc/hosts`` file, and correct it if necessary.
+. Check [path]``/etc/setup_env.sh`` on the target system, and ensure the database name is set:
 +
 ----
 MANAGER_DB_NAME='susemanager'
 ----
-. reboot the server before running [command]``mgr-setup`` again.
+. Reboot the target system
+. Run [command]``mgr-setup`` again.
 
 
 
