--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -206,15 +206,14 @@ If you need to retry setting up the target system, follow these steps:
 
 . Delete [path]``/root/.MANAGER_SETUP_COMPLETE``.
 . Stop PostgreSQL and remove [path]``/var/lib/pgsql/data``.
-. Set the hostname.
-It should have the same hostname as the source system.
+. Set the target system hostname to match the source system hostname.
 . Check the [path]``/etc/hosts`` file, and correct it if necessary.
 . Check [path]``/etc/setup_env.sh`` on the target system, and ensure the database name is set:
 +
 ----
 MANAGER_DB_NAME='susemanager'
 ----
-. Reboot the target system
+. Reboot the target system.
 . Run [command]``mgr-setup`` again.
 
 
