--- a/modules/retail/pages/retail-deploy-terminals.adoc
+++ b/modules/retail/pages/retail-deploy-terminals.adoc
@@ -18,7 +18,7 @@ For how to build OS images, see xref:administration:image-management.adoc[].
 
 [IMPORTANT]
 ====
-After you have registered new terminals, always check the {susemgr} {webui} to ensure your terminals have connected successfully to the branch server, and not directly to the {susemgr} server by mistake.
+After you have registered new terminals, always check the {susemgr} {webui} to ensure your terminals have connected successfully to the branch server, and not directly to the {susemgr} Server by mistake.
 ====
 
 == Create a Hardware Type Group
