--- a/modules/retail/pages/retail-formulas-intro.adoc
+++ b/modules/retail/pages/retail-formulas-intro.adoc
@@ -19,4 +19,4 @@ Always check the names of states and formulas to avoid name collisions.
 
 Most formulas can be updated using the {susemgr} {webui}.
 When you have made changes to your formula, ensure you apply the highstate.
-With the highstate you propagate your changes to the appropriate services.
+The highstate propagates your changes to the appropriate services.
