Retail cleanup 2 #8364 ke (#662)
* cleanup
* Co-Authored-By: Lana Brindley <lbrindley@suse.de>

--- a/modules/retail/pages/retail-deploy-terminals.adoc
+++ b/modules/retail/pages/retail-deploy-terminals.adoc
@@ -18,9 +18,8 @@ For how to build OS images, see xref:administration:image-management.adoc[].
 
 [IMPORTANT]
 ====
-After you have registered new terminals, always check the {susemgr} {webui} to ensure your terminal has connected successfully to the branch server, and you have not connected directly to the {susemgr} server by mistake.
+After you have registered new terminals, always check the {susemgr} {webui} to ensure your terminals have connected successfully to the branch server, and not directly to the {susemgr} Server by mistake.
 ====
-
 
 
 == Create A Hardware Type Group
@@ -32,8 +31,6 @@ After you have created your new hardware type group, you can apply the Saltboot 
 
 Hardware types allow you to group devices according to manufacturer and device name.
 Then, all devices of a particular type can be managed as one.
-
-You will need to create appropriate hardware types in your system.
 
 Empty profiles can be assigned to a hardware type group either before or after registration.
 If an empty profile is not assigned to a hardware type group before registration, it will be assigned to group that best matches the product information available to it.
@@ -59,7 +56,6 @@ Spaces and other non-alphanumeric characters will be removed when the name is pr
 . In the [guimenu]``Create System Group`` dialog, create a new system group, using the hardware type group name you created earlier.
 
 
-
 == Assign and Configure the Saltboot Formula for Each Hardware Type Group
 
 Each hardware type group must have the Saltboot formula applied.
@@ -68,7 +64,7 @@ Each hardware type group must have the Saltboot formula applied.
 
 . Open the details page for your new hardware type group, and navigate to the [guimenu]``Formulas`` tab.
 . Select the Saltboot formula and click btn:[Save].
-. Navigate to the new menu:Formulas[Saltboot] tab.
+. Navigate to the menu:Formulas[Saltboot] tab.
 . Configure the Saltboot formula according to the instructions in xref:retail:retail-formulas.adoc[].
 
 
@@ -84,7 +80,6 @@ salt <branch_server_salt_id> state.apply image-sync
 ----
 
 
-
 === Using a 32-bit Default Boot Image
 
 If you have 32-bit machines included in your branch, then you must use a 32-bit default boot image.
@@ -92,8 +87,12 @@ If you have 32-bit machines included in your branch, then you must use a 32-bit 
 You can check the available boot images and their architecture from the command line:
 
 ----
-# salt "branch" pillar.get boot_images
+salt "branch" pillar.get boot_images
+----
 
+Output:
+
+----
 POS_Image_JeOS6-6.0.0:
       ----------
       arch:
