add yaml example to nav

--- a/modules/retail/pages/retail-mass-config.adoc
+++ b/modules/retail/pages/retail-mass-config.adoc
@@ -23,7 +23,7 @@ Install the [package]``python-susemanager-retail`` package on the {productname} 
 .Procedure: Configuring Multiple Branch Servers
 
 . Create a YAML file describing the infrastructure you intend to install.
-For an example YAML file, see <<retail.mass.config.example.yaml>>.
+For an example YAML file, see xref:retail-mass-config-yaml.adoc[].
 . On a clean {susemgr} installation, import the YAML file you have created:
 +
 ----
@@ -62,7 +62,7 @@ You should always check that the details have been applied as expected after usi
 .Procedure: Configuring Multiple Terminals
 
 . Create a YAML file describing the infrastructure you intend to install, specifying the hardware address for each terminal.
-For an example YAML file, see <<retail.mass.config.example.yaml>>.
+For an example YAML file, xref:retail-mass-config-yaml.adoc[].
 . On a clean {productname} installation, import the YAML file you have created:
 +
 ----
