--- a/modules/retail/nav-retail.adoc
+++ b/modules/retail/nav-retail.adoc
@@ -26,6 +26,7 @@ ifndef::backend-pdf[]
 *** xref:retail-delta-images.adoc[Delta Images]
 *** xref:retail-terminal-names.adoc[Terminal Names]
 *** xref:retail-mass-config.adoc[Mass Configuration]
+*** xref:retail-mass-config-yaml.adoc[]
 *** xref:retail-offline.adoc[Offline Use]
 *** xref:retail-terminal-ratelimiting.adoc[Rate Limiting Terminals]
 // Retail Upgrade
@@ -73,6 +74,8 @@ include::modules/retail/pages/retail-delta-images.adoc[leveloffset=+3]
 include::modules/retail/pages/retail-terminal-names.adoc[leveloffset=+3]
 
 include::modules/retail/pages/retail-mass-config.adoc[leveloffset=+3]
+
+include::modules/retail/pages/retail-mass-config-yaml.adoc[leveloffset=+3]
 
 include::modules/retail/pages/retail-terminal-ratelimiting.adoc[leveloffset=+3]
 
