--- a/modules/reference/pages/images/images-stores.adoc
+++ b/modules/reference/pages/images/images-stores.adoc
@@ -18,7 +18,7 @@ image::images_image_stores_create.png[scaledwidth=80%]
 .Image stores for Kiwi build type
 [NOTE]
 ====
-Image stores for Kiwi build type are not supported yet.  Kiwi build type is used to build system, virtual, and other images.
+Kiwi build type is used to build system, virtual, and other images. Image store for Kiwi build type is pre-defined as a filesystem directory ([path]``/srv/www/os-images`` on the server) served via HTTP (https://example.com/pub/os-images/) by {productname}. The Image store location is unique and not customizable yet. 
 
 Images are always stored in [path]``/srv/www/os-image/<organization id>``.
 ====
