--- a/modules/administration/pages/public-cloud-azure.adoc
+++ b/modules/administration/pages/public-cloud-azure.adoc
@@ -13,7 +13,7 @@ It is based on JeoS, and SUSE Manager is pre-installed but not configured.
 Configuring SUSE Manager has to be done manually with {yast}.
 
 When you create your Azure virtual machine, choose the `B2ms` size.
-The `B2ms` VM contains:
+The `B2ms` VM should be good enough for basic testing:
 
 * 2{nbsp}vCPUs
 * 8{nbsp}GB RAM
@@ -78,7 +78,7 @@ When you are setting up networking, we recommend that you create a separate priv
 // REMARK: Where do you configure this?
 
 Configure the {productname} Server to use the internal IP address `10.0.0.4`.
-Ensure it is accessible from outside the network with IP `10.89.171.101`.
+Ensure it is also accessible from outside the network with a fixed IP address.
 
 Configure the firewall to only allow inbound traffic on ports `22`, `80`, and `443` to IP address `10.0.0.4`.
 In this environment, if other servers are added to the network they cannot be reached from outside the network.
@@ -98,7 +98,7 @@ Ensure that your {productname} Server is registered with {scc}.
 
 When your server is registered, install these extra packages:
 ----
-zypper -n in spacecmd mlocate sysstat
+zypper -n in spacecmd spacewalk-utils mlocate sysstat
 ----
 
 Apply the latest updates and reboot the server:
