--- a/modules/administration/pages/public-cloud-azure.adoc
+++ b/modules/administration/pages/public-cloud-azure.adoc
@@ -100,6 +100,7 @@ When your server is registered, install these extra packages:
 ----
 zypper -n in spacecmd spacewalk-utils mlocate sysstat
 ----
+// spacecmd will be installed by default next time
 
 Apply the latest updates and reboot the server:
 ----
