Minor wording change
Co-Authored-By: Karl Eichwalder <ke@suse.de>

--- a/modules/installation/pages/public-cloud-registration.adoc
+++ b/modules/installation/pages/public-cloud-registration.adoc
@@ -1,7 +1,8 @@
 [[public-cloud-registration]]
 = Registration in the Public Clouds
 
-Since {productname} is preinstalled in Public Cloud images, there is no installation step required. However, {productname} Server needs to be registered with {scc} in order to receive updates.
+Because {productname} is preinstalled in Public Cloud images, there is no installation step required.
+However, {productname} Server needs to be registered with {scc} to receive updates.
 
 To register your system, you have two options:
 
