--- a/modules/reference/pages/salt/salt-remote-commands.adoc
+++ b/modules/reference/pages/salt/salt-remote-commands.adoc
@@ -20,8 +20,8 @@ Wildcards can be used to run commands across any number of systems, so always ta
 
 On the menu:Salt[Remote Commands] page you will see two text boxes.
 The first box is for entering commands.
-The second box is for targeting clients by the [literal]``minion_id`` value (name), or by a partial match using wildcards.
+The second box is for targeting clients by name, group, or by using wildcards.
 
-Input a command you want to execute, then add a target client or a set of clients (using wildcard matching) where you want to execute the command on.
-Select the btn:[Find Targets] button to verify which clients will be targeted.
-Select the btn:[Run Command] button to execute a command on the selected systems.
+Input a command you want to execute, add a target client, group, or wildcard you want to execute the command on.
+Select the btn:[Find Targets] button to verify which machines will be targeted.
+Select the btn:[Run Command] button to execute a command on selected systems.
