--- a/modules/upgrade/pages/client-migration.adoc
+++ b/modules/upgrade/pages/client-migration.adoc
@@ -11,7 +11,7 @@ For supported {sle}{nbsp}15 upgrade paths, see  https://www.suse.com/documentati
 
 [NOTE]
 ====
-This process cannot be used to upgrade Salt clients
+This process cannot be used to upgrade Salt clients.
 ====
 
 // Do we have Salt instructions somewhere? LKB 2019-08-22
