--- a/modules/upgrade/pages/client-migration.adoc
+++ b/modules/upgrade/pages/client-migration.adoc
@@ -73,7 +73,7 @@ In order to switch from the old SLE{nbsp}12{nbsp}SP4 base channel to the new SLE
 . OPTIONAL: If you want to limit the usage, enter your value in the [guimenu]``Usage`` text field.
 . Select the [systemitem]``SLE-Product-SLES15-Pool for x86_64`` base channel.
 . OPTIONAL: Select any [guimenu]``Add-On System Types``.
-For more on this, see https://www.suse.com/documentation/sles-15/book_quickstarts/data/art_modules.html.
+For more information, see https://www.suse.com/documentation/sles-15/book_quickstarts/data/art_modules.html.
 . Click btn:[Create Activation Key].
 . Click the [guimenu]``Child Channels`` tab and select the required channels.
 . Click btn:[Update Key].
