Updates per feedback

--- a/modules/upgrade/pages/client-migration.adoc
+++ b/modules/upgrade/pages/client-migration.adoc
@@ -67,7 +67,7 @@ The [option]``install=`` parameter and the [option]``self_update=0 pt.options=se
 
 In order to switch from the old SLE{nbsp}12{nbsp}SP4 base channel to the new SLE{nbsp}15 channel, you need an activation key.
 
-. Go to menu:Main Menu[Systems > Activation Keys] and click [guimenu]``Create Key``.
+. In the {productname} Server {webui}, navigate to menu:Systems[Activation Keys] and click [guimenu]``Create Key``.
 . Enter a description for your key.
 . Enter a key or leave it blank to generate an automatic key.
 . OPTIONAL: If you want to limit the usage, enter your value in the [guimenu]``Usage`` text field.
@@ -84,7 +84,7 @@ For more information, see https://www.suse.com/documentation/sles-15/book_quicks
 Create an {ay} profile.
 For more information about {ay}, see xref:client-configuration:autoyast.adoc[].
 
-. In the {productname} Server {webui}, navigate to menu:Main Menu[Systems > Autoinstallation] and click [guimenu]``Upload Kickstart/Autoyast File``.
+. In the {productname} Server {webui}, navigate to menu:Systems[Autoinstallation] and click [guimenu]``Upload Kickstart/Autoyast File``.
 . Paste the XML content in the text area or select the file to upload and click btn:[Create].
 . Navigate to the [guimenu]``Details`` tab.
 . In the [guimenu]``Kernel Options`` field, select [systemitem]``autoupgrade=1`` and click btn:[Update].
@@ -105,7 +105,7 @@ You can monitor the mirroring progress in [path]``/var/log/rhn/reposync/sles15-p
 
 
 .Procedure: Migrating
-. In the {productname} Server {webui}, navigate to menu:Main Menu[Systems] and select the client to be upgraded.
+. In the {productname} Server {webui}, navigate to [guimenu]``Systems`` and select the client to be upgraded.
 . Navigate to menu:System Details[Provisioning > Autoinstallation > Schedule], and select the {ay} profile you uploaded.
 . Click btn:[Schedule Autoinstallation and Finish].
 
@@ -136,7 +136,7 @@ You can monitor the mirroring progress in [path]``/var/log/rhn/reposync/sles15-p
 
 
 .Procedure: Migration
-. In the {productname} Server {webui}, navigate to menu:Main Menu[Systems] and select the client to be upgraded.
+. In the {productname} Server {webui}, navigate to [guimenu]``Systems`` and select the client to be upgraded.
 . If the [guimenu]``System Details`` page has outstanding software updates, install the updates.
 . Navigate to the menu:Software[SP Migration] tab, select [systemitem]``SUSE Linux Enterprise Server 12{nbsp}SP4``, and click btn:[Select Channels].
 . Select the mandatory child channels, and any optional child channels.
@@ -150,4 +150,4 @@ You can check the progress of the migration by navigating to menu:System Details
 
 If the system status reports that the migration has failed, but also shows that software updates are available, install the update and check the status again.
 
-After the migration is complete, reboot the client.
+After the migration is complete, schedule a reboot of client from the {productname} Server.
