--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -175,7 +175,7 @@ Before you begin, check that all the channels referenced in the autoinstallation
 
 .Procedure: Migrating
 
-. On the {productname} Server {webui}, navigate to menu:Main Menu[Systems > Autoinstallation > Profiles] and upload your autoinstallation profile.
+. On the {productname} Server {webui}, navigate to menu:Systems[Autoinstallation > Profiles] and upload your autoinstallation profile.
 . In the [guimenu]``Kernel Options`` field, enter [systemitem]``autoupgrade=1 Y2DEBUG=1``
 . OPTIONAL: The debug setting is not required but can help with investigating any future problems.
 . Check the [guimenu]``autoupgrade`` option.
