--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -1,56 +1,52 @@
 [[db-migration]]
-= PostgreSQL Database Migration
+= Database Migration
 
 
-
-[[bp.chap.postgres.intro]]
-== Introduction to PostgreSQL Databases
-
+When you installed {productname} Server 3.1 or earlier on {sls}{nbsp}12{nbsp}SP2 or earlier, it was based on a PostgreSQL{nbsp}9.4 database.
+PostgreSQL{nbsp}9.4 can be upgraded to PostgreSQL{nbsp}9.6.
 
 {productname}{nbsp}3 uses PostgreSQL{nbsp}9.4 by default.
 {sls}{nbsp}12{nbsp}SP3 uses PostgreSQL{nbsp}9.6 by default.
 
-When you installed {productname} Server 3.1 or earlier on {sls}{nbsp}12{nbsp}SP2 or earlier, it was based on a PostgreSQL{nbsp}9.4 database, which you can upgrade to PostgreSQL{nbsp}9.6.
 This chapter provides information on managing your PostgreSQL database, and provides instructions for upgrading your database to PostgreSQL{nbsp}9.6.
-{productname} 3.1 on {sls}{nbsp}12{nbsp}SP3 and {productname} 3.2 use PostgreSQL{nbsp}9.6 by default.  If you use one of those you can skip the following sections.
+
+{productname}{nbsp}3.1 on {sls}{nbsp}12{nbsp}SP3 and {productname}{nbsp}3.2 use PostgreSQL{nbsp}9.6 by default.
+If you use one of those you can skip this section.
+
+
+
+== Prepare to Upgrade
+
+Before you begin the upgrade, prepare your existing system and create a database backup.
 
 PostgreSQL stores data at [path]``/var/lib/pgsql/data/``, and logs to [path]``/var/lib/pgsql/data/pg_xlog/``.
 
 
-
-[[bp.sect.postgresql.prepare.upgrade]]
-== Prepare to Upgrade PostgreSQL
-
-Before you begin upgrading you will need to check your existing system is ready for the upgrade, and prepare a database backup.
-
-.Procedure: Preparing to Upgrade PostgreSQL
+.Procedure: Preparing to Upgrade
 . Check the active PostgreSQL version:
 +
 ----
-suse-manager-example-srv:~ # psql --version
-psql (PostgreSQL) 9.x.y
+psql --version
 ----
 +
-If you are using PostgreSQL{nbsp}9.4, you can update to PostgreSQL{nbsp}9.6.
-. Check your system is fully updated:
+If you are using PostgreSQL{nbsp}9.4, you can upgrade to PostgreSQL{nbsp}9.6.
+. Check the active smdba version:
 +
 ----
-suma-test-srv:~ # rpm -q smdba
-smdba-1.5.8-0.2.3.1.x86_64
+rpm -q smdba
 ----
 +
-PostgreSQL{nbsp}9.6 requires smdba version 1.5.8 or higher.
-. Perform a database backup before you begin.
+PostgreSQL{nbsp}9.6 requires smdba version 1.5.8 or later.
+. Perform a database backup.
 For more information on backing up, see xref:administration:backup-restore.adoc[].
 
 [WARNING]
 ====
-Always create a database backup before performing a migration
+Always create a database backup before performing a migration.
 ====
 
 
 
-[[bp.sect.postgresql.regular.upgrade]]
 == Upgrade PostgreSQL
 
 PostgreSQL upgrades can be performed in two ways: a regular upgrade, or a fast upgrade.
@@ -62,40 +58,44 @@ A fast upgrade only takes a few minutes, and uses no additional disk space.
 However, fast upgrades are more likely to fail, and if this occurs you will need to restore the database from backup.
 
 
-.Procedure: Performing a Regular PostgreSQL Upgrade
-. Perform a database backup before you begin.
+.Procedure: Performing a Regular Upgrade
+. Perform a database backup.
 For more information on backing up, see xref:administration:backup-restore.adoc[].
 . Begin the upgrade:
 +
 ----
 /usr/lib/susemanager/bin/pg-migrate.sh
 ----
-+
+. When the upgrade has successfully completed, you can safely delete the old database directory and reclaim lost disk space.
+The old directory is renamed to [path]``/var/lib/pgsql/data-pg94``.
+
 The [path]``pg-migrate.sh`` script performs these operations:
-+
+
 * Stop spacewalk services
 * Shut down the running database
-* Check if PostgreSQL{nbsp}9.6 is installed and install it if not already present
+* Check if PostgreSQL{nbsp}9.6 is installed and install it if necessary
 * Switch from PostgreSQL{nbsp}9.4 to PostgreSQL{nbsp}9.6 as the new default
 * Initiate the database migration
 * Create a PostgreSQL configuration file tuned for use by {productname}
 * Start the database and spacewalk services
-+
+
 [NOTE]
 ====
 If the upgrade fails, the migration script will attempt to restore the database to its original state.
 ====
-. After the upgrade has successfully completed, you can safely delete the old database directory which will have been renamed to [path]``/var/lib/pgsql/data-pg94`` to reclaim lost disk space.
+
 
 
 .Procedure: Performing a Fast PostgreSQL Upgrade
-. Perform a database backup before you begin.
+. Perform a database backup.
 For more information on backing up, see xref:administration:backup-restore.adoc[].
 . Begin the upgrade:
 +
 ----
 /usr/lib/susemanager/bin/pg-migrate.sh fast
 ----
+. When the upgrade has successfully completed, you can safely delete the old database directory and reclaim lost disk space.
+The old directory is renamed to [path]``/var/lib/pgsql/data-pg94``.
 
 ////
 This seems overly long, and I'm not sure of the value. Plus we should also replace it with a fully en-US version. -LKB
