replaced tailf with tail -f globally

--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -110,8 +110,8 @@ After synchronizing with SCC clients may receive updates, and be organized into 
 
 This section covers synchronizing with SCC from the {webui} and adding your first client channel.
 
-Before you can synchronize software repositories with SCC, you will need to enter Organization Credentials in {susemgr}.  
-These organization credentials (previously called mirror credentials) give you access to the SUSE product downloads.  
+Before you can synchronize software repositories with SCC, you will need to enter Organization Credentials in {susemgr}.
+These organization credentials (previously called mirror credentials) give you access to the SUSE product downloads.
 You will find your organization credentials in https://scc.suse.com/organization.
 
 Enter your organization credentials in the {susemgr} {webui}:
@@ -170,8 +170,7 @@ To update the grub2 during boot run [command]``grub2-install /dev/sda``.
 Monitor channel synchronization process in real-time by viewing channel log files located in the directory [path]``/var/log/rhn/reposync``:
 
 ----
-tailf /var/log/rhn/reposync/<CHANNEL_NAME>.log
+tail -f /var/log/rhn/reposync/<CHANNEL_NAME>.log
 ----
 
 After the channel sync process has completed proceed to xref:client-configuration:manual-registration-overview.adoc[Client Registration].
-
