--- a/README.adoc
+++ b/README.adoc
@@ -45,22 +45,15 @@ endif::[]
 :imagesdir: images
 
 
-
-image::http://dcad.com.pl/wp-content/uploads/2011/01/energy.jpg[energy]
-
-
 [suma.doc.intro]
 == Introduction
 This is the source for the official SUSE Manager documentation.
-Documents can be viewed on GitHub as rendered AsciiDoc sources, by browsing to https://github.com/SUSE/doc-susemanager/blob/develop/adoc/MAIN-manager.adoc[MAIN-manager.adoc].
 
+We welcome pull requests.
+Please follow these instructions to create your pull request.
 
-
-[suma.doc.wiki]
-== Documentation Wiki
-
-For more details on SUSE Manager documentation, visit the https://github.com/SUSE/doc-susemanager/wiki[SUSE Manager Documentation Wiki].  In the wiki find information about
-https://github.com/SUSE/doc-susemanager/wiki/Asciidoc-getting-started[asciidoc usage], publishing the set of documents on the Web or with the product, technical background information about our tools, and more.
+For more details on contributing to SUSE Manager documentation, visit the https://github.com/SUSE/doc-susemanager/wiki[SUSE Manager Documentation Wiki].  
+The wiki contains information about word usage, markup conventions, our docs toolchain, building locally, and publishing documentation.
 
 
 
@@ -110,8 +103,7 @@ git commit -m "Commit message here"
 git push
 ----
 +
-Note that git may require you to set an upstream in order to push.
-If so, use this command:
+If git prompts you to set an upstream in order to push, use this command:
 +
 ----
 git push --set-upstream origin branchname
@@ -119,7 +111,8 @@ git push --set-upstream origin branchname
 
 . Create a pull request (PR) by navigating to https://github.com/SUSE/doc-susemanager and clicking on [btn]``Compare and Create Pull Request``.
 Write an informative commit message detailing your changes, choose reviewers, and save your PR.
-+
+
+
 [NOTE]
 ====
 Choose your reviewers carefully!
@@ -142,19 +135,9 @@ This allows people to review the PR, but notifies reviewers that you have not co
 
 
 
-[suma.docs.tea,]
+[suma.docs.team]
 == The SUSE Manager Documentation Team
 
 * Joseph Cayouette @jcayouette
 * Karl Eichwalder @keichwa
 * Lana Brindley @Loquacity
-
-
-[suma.doc.changelog]
-== Changelog
-
-Update: 6.6.2018:
-
-* [*] Move from db5 sources to adoc
-* [*] Create an adoc getting started guide (see wiki)
-* [*] Create links to official Asciidoctor manuals
