--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -384,7 +384,7 @@ Show help message and exit.
 .Maximum File Size
 ====
 By default, the maximum file size for configuration files is 128 KB.
-If you need to change that value, see xref:reference:configuration/config-files-menu.adoc[].
+For information on changing the maximum file size value, see xref:reference:configuration/config-files-menu.adoc[].
 ====
 
 
