--- a/modules/reference/pages/configuration/config-files-menu.adoc
+++ b/modules/reference/pages/configuration/config-files-menu.adoc
@@ -17,7 +17,7 @@ ifdef::showremarks[]
     stay here. #
 endif::showremarks[]
 
-The default maximum file size is set on the {productname} server in these files:
+The default maximum file size is set on the {productname} Server in these files:
 
 ----
 # /usr/share/rhn/config-defaults/rhn_web.conf
