--- a/modules/reference/pages/configuration/config-files-menu.adoc
+++ b/modules/reference/pages/configuration/config-files-menu.adoc
@@ -27,7 +27,8 @@ web.maximum_config_file_size = 131072
 maximum_config_file_size = 131072
 ----
 
-Copy these variables to [filename]``/etc/rhn/rhn.conf`` and edit them.  Values are specified in bytes, for example:
+Copy these variables to [filename]``/etc/rhn/rhn.conf`` and edit them.  
+Values are specified in bytes, for example:
 
 ----
 # /etc/rhn/rhn.conf
