--- a/modules/reference/pages/salt/salt-remote-commands.adoc
+++ b/modules/reference/pages/salt/salt-remote-commands.adoc
@@ -22,6 +22,7 @@ On the menu:Salt[Remote Commands] page you will see two text boxes.
 The first box is for entering commands.
 The second box is for targeting clients by the [literal]``minion_id`` value (name), or by a partial match using wildcards.
 
-Input a command you want to execute, then add a target client or a set of clients (using wildcard matching) where you want to execute the command on.
+Enter the command you want to execute.
+Add a target client to execute the command on, or use wildcard matching to target a group of clients.
 Select the btn:[Find Targets] button to verify which clients will be targeted.
 Select the btn:[Run Command] button to execute a command on the selected systems.
