--- a/modules/reference/pages/salt/salt-remote-commands.adoc
+++ b/modules/reference/pages/salt/salt-remote-commands.adoc
@@ -24,5 +24,5 @@ The second box is for targeting clients by the [literal]``minion_id`` value (nam
 
 Enter the command you want to execute.
 Add a target client to execute the command on, or use wildcard matching to target a group of clients.
-Select the btn:[Find Targets] button to verify which clients will be targeted.
+Click btn:[Find Targets] to verify which clients will be targeted.
 Select the btn:[Run Command] button to execute a command on the selected systems.
