--- a/modules/reference/pages/salt/salt-remote-commands.adoc
+++ b/modules/reference/pages/salt/salt-remote-commands.adoc
@@ -25,4 +25,4 @@ The second box is for targeting clients by the [literal]``minion_id`` value (nam
 Enter the command you want to execute.
 Add a target client to execute the command on, or use wildcard matching to target a group of clients.
 Click btn:[Find Targets] to verify which clients will be targeted.
-Select the btn:[Run Command] button to execute a command on the selected systems.
+Click btn:[Run Command] to execute the command on the target systems.
