--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -16,7 +16,7 @@ ifndef::backend-pdf[]
 ** xref:kubernetes.adoc[Kubernetes]
 // Public Cloud
 ** xref:public-cloud.adoc[Public Cloud]
-*** xref:public-cloud-azure.adoc[]
+// *** xref:public-cloud-azure.adoc[]
 // ISS
 ** xref:iss.adoc[Inter-Server Synchronization]
 ** Security
@@ -82,7 +82,8 @@ include::modules/administration/pages/kubernetes.adoc[leveloffset=+1]
 // Public Cloud
 
 include::modules/administration/pages/public-cloud.adoc[leveloffset=+1]
-include::modules/administration/pages/public-cloud-azure.adoc[leveloffset=+1]
+// include::modules/administration/pages/public-cloud-azure.adoc[leveloffset=+1]
+
 // ISS
 include::modules/administration/pages/iss.adoc[leveloffset=+1]
 
