B2ms replaced with d8s_v3 per feedback

--- a/modules/administration/pages/public-cloud-azure.adoc
+++ b/modules/administration/pages/public-cloud-azure.adoc
@@ -12,15 +12,13 @@ The image is a pre-built image created by {suse}.
 It is based on JeoS, and SUSE Manager is pre-installed but not configured.
 Configuring SUSE Manager has to be done manually with {yast}.
 
-When you create your Azure virtual machine, choose the `B2ms` size.
-The `B2ms` VM should be good enough for basic testing:
-
-* 2{nbsp}vCPUs
-* 8{nbsp}GB RAM
+When you create your Azure virtual machine, choose something `like d8s_v3` with 8{nbsp}vCPUs and 32{nbsp}GB RAM.
+////
 * Up to 4 data disks
 * Max IOPS 2400
 * Temporary storage disk of 16{nbsp}GB.
 Data on this disk will be destroyed after the guest has been switched off.
+////
 
 When you are setting up disk partitioning, we recommend:
 
