--- a/README.adoc
+++ b/README.adoc
@@ -106,7 +106,7 @@ git push
 If git prompts you to set an upstream in order to push, use this command:
 +
 ----
-git push --set-upstream origin branchname
+git push --set-upstream origin <branchname>
 ----
 
 . Create a pull request (PR) by navigating to https://github.com/SUSE/doc-susemanager and clicking on [btn]``Compare and Create Pull Request``.
