--- a/modules/upgrade/pages/client-migration.adoc
+++ b/modules/upgrade/pages/client-migration.adoc
@@ -150,4 +150,4 @@ You can check the progress of the migration by navigating to menu:System Details
 
 If the system status reports that the migration has failed, but also shows that software updates are available, install the update and check the status again.
 
-After the migration is complete, schedule a reboot of client from the {productname} Server.
+After the migration is complete, schedule a reboot of the client from the {productname} Server.
