--- a/modules/salt/pages/large-scale-tuning.adoc
+++ b/modules/salt/pages/large-scale-tuning.adoc
@@ -213,7 +213,7 @@ This section contains information about the available parameters.
 [cols="1,1"]
 |===
 | Description          | The maximum number of minions concurrently executing a scheduled action.
-| Tune when            | xref:client-count[Client count] reaches several thousands and actionss are not executed quickly enough.
+| Tune when            | xref:client-count[Client count] reaches several thousands and actions are not executed quickly enough.
 | Value default        | 200
 | Value recommendation | 200-500
 | Location             | [path]``/etc/rhn/rhn.conf``
