--- a/modules/salt/pages/salt-ssh.adoc
+++ b/modules/salt/pages/salt-ssh.adoc
@@ -76,7 +76,7 @@ The server creates a reverse SSH tunnel that connects `localhost:1233` on the cl
 ssh ... -R 1233:suma-server:443
 ----
 
-This means that the package manager will actually connect to `localhost:1233` which is then forwarded to `suma-server:443` by the SSH tunnel.
+This means that the package manager will actually connect to `localhost:1233`, which is then forwarded to `suma-server:443` by the SSH tunnel.
 
 The package manager can contact the server only if the tunnel is open, which occurs only when the server executes an action on the client.
 
