--- a/modules/salt/pages/salt-ssh.adoc
+++ b/modules/salt/pages/salt-ssh.adoc
@@ -236,7 +236,7 @@ For more information, see https://github.com/SUSE/spacewalk/blob/Manager/java/co
 
 To connect to a proxy, the parent server or proxy uses a specific user called `mgrsshtunnel`.
 When `mgrsshtunnel` connects, the SSH configuration of the proxy will force the execution of ``/usr/sbin/mgr-proxy-ssh-force-cmd`.
-This is a simple shell script that allows only the execution of `scp`, `ssh` or `cat` commands.
+This is a simple shell script that allows only the execution of `scp`, `ssh`, or `cat` commands.
 
 The connection to the proxy or client is authorized using SSH keys in this sequence:
 
