--- a/modules/salt/pages/salt-ssh.adoc
+++ b/modules/salt/pages/salt-ssh.adoc
@@ -268,7 +268,7 @@ image::salt-ssh-push-tunnel-repo-access.png[]
 
 
 
-== Proxy setup
+== Proxy Setup
 
 When the `spacewalk-proxy` package is installed on the proxy, the `mgrsshtunnel` user is created.
 
