--- a/modules/salt/pages/salt-ssh.adoc
+++ b/modules/salt/pages/salt-ssh.adoc
@@ -288,7 +288,7 @@ If a 404 error is received from that endpoint, then the parent is assumed to be 
 
 If an SSH key exists at `/srv/susemanager/salt/salt_ssh/mgr_ssh_id.pub` on the server it is returned.
 
-If the public key doesn't exist because `salt-ssh` has not been invoked yet, a key will be generates by calling the `mgrutil.ssh_keygen` runner.
+If the public key does not exist because `salt-ssh` has not been invoked yet, a key will be generates by calling the `mgrutil.ssh_keygen` runner.
 
 [NOTE]
 ====
