improve Maximum Size for Configuration Files (#669)
* improve Maximum Size for Configuration Files
https://github.com/SUSE/spacewalk/issues/9127
https://bugzilla.suse.com/show_bug.cgi?id=1146411
Co-Authored-By: Lana Brindley <lbrindley@suse.de>

--- a/modules/reference/pages/command-line-tools.adoc
+++ b/modules/reference/pages/command-line-tools.adoc
@@ -381,17 +381,12 @@ Show help message and exit.
 
 
 [TIP]
-.Max File size
+.Maximum File Size
 ====
-By default, the maximum file size for configuration files is 128KB.
-If you need to change that value, find or create the following line in the [path]``/etc/rhn/rhn.conf`` file:
-
-----
-web.maximum_config_file_size=128
-----
-
-Change the value from 128 to whatever limit you need in kilobytes.
+By default, the maximum file size for configuration files is 128 KB.
+For information on changing the maximum file size value, see xref:reference:configuration/config-files-menu.adoc[].
 ====
+
 
 
 [[diff.between.latest.config.files]]
