--- a/modules/reference/pages/configuration/config-files-menu.adoc
+++ b/modules/reference/pages/configuration/config-files-menu.adoc
@@ -7,7 +7,8 @@ Both centrally-managed and locally-managed files can be reached from sub-pages.
 .Maximum Size for Configuration Files
 [NOTE]
 ====
-By default, the maximum file size for configuration files is 128 KB (131072 bytes). {suse} supports a configuration file size up to 1 MB; larger values are not guaranteed to work.
+By default, the maximum file size for configuration files is 128 KB (131072 bytes).
+{suse} supports a configuration file size up to 1 MB; larger values are not guaranteed to work.
 ====
 
 
@@ -16,23 +17,28 @@ ifdef::showremarks[]
     stay here. #
 endif::showremarks[]
 
-To change the file size limit, edit all the following files on the {productname} server and edit or add the following variables:
+The default maximum file size is set on the {productname} Server in these files:
 
 ----
 # /usr/share/rhn/config-defaults/rhn_web.conf
-web.maximum_config_file_size = 262144
+web.maximum_config_file_size = 131072
 
 # /usr/share/rhn/config-defaults/rhn_server.conf
-maximum_config_file_size = 262144
+maximum_config_file_size = 131072
+----
 
+Copy these variables to [filename]``/etc/rhn/rhn.conf`` and edit them.  
+Values are specified in bytes, for example:
+
+----
 # /etc/rhn/rhn.conf
-web.maximum_config_file_size=262144
-server.maximum_config_file_size=262144
+web.maximum_config_file_size = 262144
+server.maximum_config_file_size = 262144
 ----
 
 
 Then restart [systemitem]``spacewalk``:
 
 ----
-# spacewalk-service restart
+spacewalk-service restart
 ----
