--- a/modules/reference/pages/salt/salt-remote-commands.adoc
+++ b/modules/reference/pages/salt/salt-remote-commands.adoc
@@ -20,8 +20,9 @@ Wildcards can be used to run commands across any number of systems, so always ta
 
 On the menu:Salt[Remote Commands] page you will see two text boxes.
 The first box is for entering commands.
-The second box is for targeting clients by name, group, or by using wildcards.
+The second box is for targeting clients by the [literal]``minion_id`` value (name), or by a partial match using wildcards.
 
-Input a command you want to execute, add a target client, group, or wildcard you want to execute the command on.
-Select the btn:[Find Targets] button to verify which machines will be targeted.
-Select the btn:[Run Command] button to execute a command on selected systems.
+Enter the command you want to execute.
+Add a target client to execute the command on, or use wildcard matching to target a group of clients.
+Click btn:[Find Targets] to verify which clients will be targeted.
+Click btn:[Run Command] to execute the command on the target systems.
