updated clm content

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -30,9 +30,10 @@ ifndef::backend-pdf[]
 // Backing up
 ** xref:backup-restore.adoc[Backing Up and Restoring]
 ** Tuning
-*** xref:tuning-changelogmetadata.adoc[Tuning Changelog Metadata]
+*** xref:tuning-changelogs.adoc[Tuning Changelog Metadata]
 ** Maintenance Window
 *** xref:content-lifecycle.adoc[Content Lifecycle Management]
+*** xref:content-lifecycle-filters.adoc[Content lifecycle Filters]
 // Troubleshooting
 ** xref:tshoot-intro.adoc[Troubleshooting]
 *** xref:tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
@@ -107,6 +108,8 @@ include::modules/administration/pages/tuning-changelogs.adoc[leveloffset=+1]
 
 // Maintenance Window
 include::modules/administration/pages/content-lifecycle.adoc[leveloffset=+2]
+
+include::modules/administration/pages/content-lifecycle-filters.adoc[leveloffset=+2]
 
 // Troubleshooting
 == Troubleshooting
