--- a/modules/reference/pages/clm/clm-filters.adoc
+++ b/modules/reference/pages/clm/clm-filters.adoc
@@ -13,3 +13,5 @@
 . In the [guimenu]``Filters`` dialog, select the filter you want to apply to the project.
 . Click the btn:[Save] button.
 You can create a new filter from within a project by the btn:[Create new Filter] in the [guimenu]``Filters`` dialog of a project as well.
+
+For use cases see xref:administration:content-lifecycle-filters.adoc[]
