--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -1,11 +1,7 @@
 [[proxy-setup]]
 = SUSE Manager Proxy Setup
 
-
-
-
-
-{productname}  Proxy requires additional configuration in order to make it useful.
+{productname} Proxy requires additional configuration to make it useful.
 
 
 ////
@@ -22,6 +18,7 @@ The new salt-broker service will be automatically started at the end of the pack
 This service forwards the Salt interactions to the {productname} server.
 ////
 
+// REMARK 2019-08-23, ke: Is this a proxy-only feature?
 [NOTE]
 .Proxy Chains
 ====
@@ -29,7 +26,8 @@ It is possible to arrange Salt proxies in a chain.
 In such a case, the upstream proxy is named "`parent`".
 ====
 
-Make sure the proxie's TCP ports `4505` and `4506` are open and that the proxy can reach the {productname} server (or another upstream proxy) on these ports.
+Make sure the proxie's TCP ports `4505` and `4506` are open.
+The proxy must be able to reach the {productname} Server or a parent proxy on these ports.
 
 
 
@@ -37,10 +35,10 @@ Make sure the proxie's TCP ports `4505` and `4506` are open and that the proxy c
 [[at.manager.proxy.run.copycert]]
 == Copy Server Certificate and Key
 
-The proxy will share some SSL information with the {productname} server.
-Copy the certificate and its key from the {productname} 4 server or the upstream proxy.
+The proxy will share some SSL information with the {productname} Server.
+Copy the certificate and its key from the {productname} 4 Server or the parent proxy.
 
-As root, enter the following commands on the proxy using your {productname} 4 server or chained proxy 4 named [replaceable]``PARENT``:
+As root, enter the following commands on the proxy using your {productname} 4 Server or parent Proxy 4 (named [replaceable]``PARENT``):
 
 ----
 mkdir -m 700 /root/ssl-build
@@ -54,13 +52,13 @@ scp root@PARENT:/root/ssl-build/rhn-ca-openssl.cnf .
 [NOTE]
 ====
 To keep the security chain intact, the {susemgrproxy} functionality requires the SSL certificate to be signed by the same CA as the {productname} Server certificate.
-Using certificates signed by different CAs for Proxies and Server is not supported.
+Using certificates signed by different CAs for proxies and server is not supported.
 ====
 
 
 
 [[at.manager.proxy.run.confproxy]]
-== Running [command]``configure-proxy.sh``
+== Run [command]``configure-proxy.sh``
 
 The [command]``configure-proxy.sh`` script will finalize the setup of your {susemgrproxy}.
 
@@ -69,7 +67,7 @@ Pressing kbd:[Enter] without further input will make the script use the default 
 Here is some information about the requested settings:
 
 {productname} Parent::
-A {productname} parent can be either another proxy server or a {productname} server.
+A {productname} parent can be either another proxy or a {productname} Server.
 
 HTTP Proxy::
 A HTTP proxy enables your {productname} proxy to access the Web.
@@ -104,7 +102,7 @@ For further information on country codes, refer to the online https://www.iso.or
 [TIP]
 .Country Code
 ====
-As the country code enter the country code set during the SUSE Manager installation.
+As the country code enter the country code set during the {productname} installation.
 For example, if your proxy is in US and your {productname} in DE, you must enter `DE` for the proxy.
 ====
 +
@@ -114,7 +112,7 @@ Use this if your proxy server can be accessed through various DNS CNAME aliases.
 Otherwise it can be left empty.
 
 CA Password::
-Enter the password that was used for the certificate of your {productname} server.
+Enter the password that was used for the certificate of your {productname} Server.
 
 Do You Want to Use an Existing SSH Key for Proxying SSH-Push Salt Minion?::
 Use this option if you want to reuse a SSH key that was used for SSH-Push Salt clients on the server.
@@ -129,35 +127,35 @@ Activate advertising proxy via SLP?::
 SLP stands for Service Location Protocol.
 
 If parts are missing, such as CA key and public certificate, the script prints commands that you must execute to integrate the needed files.
-When the mandatory files are copied, re-run [command]``configure-proxy.sh``.
-Also restart the script if a HTTP error was met during script execution.
+When the mandatory files are copied, run [command]``configure-proxy.sh`` again.
+Also run again the script if a HTTP error was met during script execution.
 
 [command]``configure-proxy.sh`` activates services required by {productname} Proxy, such as [systemitem]``squid``, [systemitem]``apache2``, [systemitem]``salt-broker``, and [systemitem]``jabberd``.
 
-To check the status of the proxy system and its clients, click the proxy system's details page on the {webui} (menu:Main Menu[Systems > Proxy], then the system name).
-[guimenu]``Connection`` and [guimenu]``Proxy`` subtabs display the respective status information.
+To check the status of the proxy system and its clients, click the proxy system's details page on the {webui} (menu:Systems[Proxy], then the system name).
+[guimenu]``Connection`` and [guimenu]``Proxy`` subtabs display various status information.
 
 
 
 
 [[proxy.pxe.setup]]
-== Enabling PXE Boot via {susemgrproxy}
+== Enable PXE Boot through {susemgrproxy}
 
 
 
 [[proxy.pxe.sync]]
-=== Synchronizing Profiles and System Information
+=== Synchronize Profiles and System Information
 
-To enable PXE boot via a proxy server, additional software must be installed and configured on both the {productname} server and the {susemgrproxy} server.
+To enable PXE boot through a proxy server, additional software must be installed and configured on both the {productname} Server and the {susemgrproxy} Server.
 
-. On the {productname} server install [package]#susemanager-tftpsync# :
+. On the {productname} Server install [package]#susemanager-tftpsync#:
 +
 
 ----
 zypper in susemanager-tftpsync
 ----
 
-. On the {susemgrproxy} server install [package]#susemanager-tftpsync-recv# :
+. On the {susemgrproxy} Server install [package]#susemanager-tftpsync-recv#:
 +
 
 ----
@@ -172,10 +170,11 @@ configure-tftpsync.sh
 ----
 +
 
-It asks for hostname and IP address of the {productname} server and of the proxy itself.
+It asks for hostname and IP address of the {productname} Server and of the proxy itself.
 Additionally, it asks for the tftpboot directory on the proxy.
 
-. On the {productname} server, run [command]``configure-tftpsync.sh`` to configure the upload to the {susemgrproxy} server:
+// 2019-08-23, ke: It is not clear what this means:
+. On the {productname} Server, run [command]``configure-tftpsync.sh`` to configure the upload to the {susemgrproxy} server:
 +
 
 ----
@@ -190,14 +189,14 @@ cobbler sync
 ----
 +
 
-Also can also be done after each a change within Cobbler that needs to be synchronized immediately.
-Otherwise Cobbler synchronization will also run automatically when needed.
+It can also be done after a change within Cobbler that needs to be synchronized immediately.
+Otherwise Cobbler synchronization will run automatically when needed.
 For more information about Cobbler, see xref:client-configuration:cobbler.adoc[Cobbler].
 
 
 
 [[proxy.pxe.dhcp]]
-=== Configuring DHCP for PXE via {susemgrproxy}
+=== Configure DHCP for PXE through {susemgrproxy}
 
 {productname} is using Cobbler to provide provisioning.
 PXE (tftp) is installed and activated by default.
@@ -209,8 +208,10 @@ filename: "pxelinux.0"
 ----
 
 
+
+// REMARK: 2019-08-23, ke: this needs closer checking
 [[replacing.a.susemgrproxy]]
-== Replacing a {susemgrproxy}
+== Replace a {susemgrproxy}
 
 A {susemgrproxy} is `dumb` in the sense that it does not contain any information about the clients that are connected to it.
 A {susemgrproxy} can therefore be replaced by a new one.
@@ -223,12 +224,13 @@ If you do not use the reactivation key, you will need to re-registered all the c
 [[proxy.migration3.replace]]
 .Procedure: Replacing a {susemgrproxy} and Keeping the Clients Registered
 . Before starting the actual migration procedure, save the data from the old proxy, if needed.
-Consider copying important data to a central place that can also be accessed by the new server:
-** Copy the scripts that are still needed.
-** Copy the activation keys from the previous server.
-Of course, it is always better to re-create the keys.
-. Shutdown the server.
-. Install a new {productname}{nbsp}{productnumber} Proxy, see xref:install-proxy-unified.adoc[Proxy Installation].
+Consider copying important data to a central place that can also be accessed by the new proxy server.
+// REMARK: 2019-08-23, ke: this is unclear
+// ** Copy the scripts that are still needed.
+// ** Copy the activation keys from the previous server.
+// Of course, it is always better to re-create the keys.
+. Shutdown the proxy server.
+. Install a new {susemgrproxy}{nbsp}{productnumber}, following xref:install-proxy-unified.adoc[Proxy Installation].
 . In the {productname} {webui} select the newly installed {susemgrproxy} and delete it from the systems list.
 [[step.at.proxy.migration3.replace.react]]
 . In the {webui}, create a reactivation key for the old proxy system: On the System Details tab of the old proxy click [guimenu]``Reactivation``.
@@ -242,8 +244,8 @@ For more information about reactivation keys, see xref:reference:systems/system-
 [IMPORTANT]
 .Proxy Installation and Client Connections
 ====
-During the installation of the proxy, clients will not be able to reach the {productname} server.
-After a {susemgrproxy} system has been deleted from the systems list, all clients connected to this proxy will be (incorrectly) listed as `directly connected` to the {productname} server.
+During the installation of the proxy, clients will not be able to reach the {productname} Server.
+After a {susemgrproxy} system has been deleted from the systems list, all clients connected to this proxy will be (incorrectly) listed as `directly connected` to the {productname} Server.
 After the first successful operation on a client _such as execution of a remote command or installation of a package or patch_ this information will automatically be corrected.
-This may take a few hours.
+This may take some hours.
 ====
