updated INTRO, GenR, HardR, NetR

--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -1,12 +1,12 @@
 [[installation-general-requirements]]
 = General Requirements
 
-
-Before you begin your installation, check that your environment meets these requirements:
+// REMARK this list needs to be cleaned up
+Before you begin installation, ensure that your environment meets the following requirements:
 
 * Current {scc} organization credentials
 * Access to installation media
-* Your environment meets the hardware and networking requirements
+* Environment meets the hardware and networking requirements
 * You understand the supported client operating systems
 
 
@@ -25,19 +25,18 @@ It is also not possible to use {slsa} for SAP as a base for {productname} for a 
 [[install.scc-register]]
 == Obtaining your SUSE Customer Center Credentials
 
-You will need to create an account with {scc} before you install {sls} and {productname}.
-To obtain your {scc} credentials:
+Create an account with {scc} before installation of {sls} and {productname}.
 
 [[creating.scc.account.mgr]]
 .Procedure: Obtaining Your SCC Organization Credentials
 . Navigate to https://scc.suse.com/login in your Web browser.
 . Log in to your SCC account, or follow the prompts to create a new account.
-. If you have not yet done so, click [guimenu]``Connect to an organization`` and type or search for your organization.
-. Click [guimenu]``Manage my organizations`` and select your organization from the list by clicking on the organization name.
-. Click the [guimenu]``Organization`` tab, and then select the [guimenu]``Organization Credentials`` tab.
+. If you have not yet done so, click btn:[Connect to an Organization] and type or search for your organization.
+. Click btn:[Manage my Organizations] and select your organization from the list by clicking on the organization name.
+. Click the btn:[Organization] tab, and then select the btn:[Organization Credentials] tab.
 . Record your login information for use during {productname} setup.
 
-Depending on your organization's setup, you might also need to activate your subscription, using the [guimenu]``Activate subscriptions`` menu.
+Depending on your organization's setup, you might also need to activate your subscription, using the btn:[Activate Subscriptions] menu.
 
 
 
@@ -46,13 +45,12 @@ Depending on your organization's setup, you might also need to activate your sub
 
 From {slsa}{nbsp}15{nbsp}SP1, {susemgr} Server and Proxy is available as a base product, and can be installed with the {slsa} Unified Installer.
 
+//REMARK What about Uyuni?
 ifeval::[{suma-content} == true]
 Therefore you do not require a separate registration code for {slsa} {sles-version} {sp-version}, only for Server or Proxy
 endif::[]
 
 Download {slsa}{nbsp}15{nbsp}SP1 or higher from https://www.suse.com/products/server/download/[SUSE Linux Enterprise Server - Media Download]
-
-//TODO: What about Uyuni?
 
 
 
