--- a/modules/installation/pages/hardware-requirements.adoc
+++ b/modules/installation/pages/hardware-requirements.adoc
@@ -1,9 +1,8 @@
 [[install-hardware-requirements]]
 = Hardware Requirements
 
-
 This table outlines hardware and software requirements on {x86_64} and {ppc64le} architecture.
-For installation on {ibmz}, see xref:installation:install-ibmz.adoc[Install on IBM Z].
+For installation on {ibmz}, see xref:installation:install-ibmz.adoc[].
 
 [cols="1,1", options="header"]
 .Hardware Requirements for {x86_64} Architecture
