--- a/modules/installation/pages/install-intro.adoc
+++ b/modules/installation/pages/install-intro.adoc
@@ -1,6 +1,7 @@
 [[installation-intro]]
 = Introduction
 
+// REMARK we should update the intro. This is a marketing block for the product. It is not related to installation
 {productname} provides absolute control over your Linux environment.
 System administrators often have tens, hundreds, or even thousands of client machines they need to look after, all of which require ongoing maintenance, updates, and lifecycle management.
 {productname} allows you to manage all your Linux clients in one place, with one easy-to-understand dashboard.
@@ -11,7 +12,7 @@ Because {productname} allows you to manage large numbers of systems and automati
 {productname} can be used in conjunction with Red Hat Satellite Server and offers seamless management of both {sle} and {rhel} client systems.
 
 
-
+//REMARK we should stick with only two ifeval statements. [{suma-content} == true]
 == Installing {productname}
 
 ifeval::[{productname} == "SUSE Manager"]
@@ -21,4 +22,6 @@ This is the default method of installation.
 
 endif::[]
 
+
+// REMARK this para needs an update. We provide more than just jeos in this book.
 This section guides you through installing the {jeos} operating system in a virtual machine, before performing the {productname} Server installation.
