fixed comment block, and broken attribute

--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -4,7 +4,6 @@
 
 This section contains information about registering traditional and Salt clients running {rhel} operating systems.
 
- 
 
 
 == Set up a {rhel} Client
@@ -42,7 +41,7 @@ The base {rhel} software channel does not contain any packages.
 This is because {suse} does not provide {rhel} base media.
 You will need to obtain base media from Red Hat, which you can then add as a child channel to the {rhel} parent channel.
 
-The {rhel} and tools channels are provided by {SSC}.
+The {rhel} and tools channels are provided by {scc}.
 You can synchronize your client with the [command]``mgr-sync`` command to get them.
 
 Because the {rhel} channels are particularly large, it can take up to 24 hours for an initial channel synchronization to complete.
