--- a/modules/installation/pages/network-requirements.adoc
+++ b/modules/installation/pages/network-requirements.adoc
@@ -1,11 +1,6 @@
 [[installation-network-requirements]]
 = Network Requirements
 
-
-
-
-
-
 This section details the networking and port requirements for {productname}.
 
 Fully Qualified Domain Name (FQDN)::
@@ -25,7 +20,7 @@ For more information about configuring a proxy for access to {scc} during a {sle
 
 
 .Naming Your Server
-[IMPORTANT]
+[CAUTION]
 ====
 The hostname of {productname} must not contain uppercase letters as this may cause _jabberd_ to fail.
 Choose the hostname of your {productname} server carefully.
