https://download.suse.com/

--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -21,6 +21,7 @@ If you want to use it as a production environment, consider the requirements lis
 ====
 
 In the following table replace _version_ with the actual product version string.
+Find the JeOS image at https://download.suse.com/.
 
 [cols="1,1", options="header"]
 |===
