--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -16,7 +16,8 @@ Enter the following settings when creating a new virtual machine using *virt-man
 
 [NOTE]
 ====
-In the following table minimal requirements are specified, which are suitable for a quick test installation (server with one client).
+This table specifies the minimum requirements.
+These are suitable for a quick test installation, such as a server with one client.
 If you want to use it as a production environment, consider the requirements listed in xref:hardware-requirements.adoc[].
 ====
 
