--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -58,7 +58,7 @@ Create three additional virtual disks required for the {productname} storage par
 . Create a new virtual machine using the downloaded JeOS KVM image and select [guimenu]``Import existing disk image``.
 . Configure RAM and number of CPUs (at least 4 GB RAM and 2 CPUs).
 . Name your KVM machine and select the [guimenu]``Customize configuration before install`` check box.
-. Click btn:[Add Hardware] and create three new virtual disks with the following specifications.
+. Click btn:[Add Hardware] to create three new virtual disks with these specifications.
 These disks will be partitioned and mounted in <<proc.jeos.susemgr.prep>>.
 +
 
