--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -78,7 +78,7 @@ Also consider to create a separate partition for [path]``/srv`` where Kiwi image
 | VirtIO Disk 4        | swap      | 4{nbsp}GB
 |===
 
-. To boot the new VM from the JeOS image click btn:[Begin Installation].
+. Click btn:[Begin Installation] to boot the new VM from the JeOS image.
 
 Proceed through the basic JeOS installation prompts until the command prompt wait for input.
 
