--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -80,7 +80,7 @@ Also consider to create a separate partition for [path]``/srv`` where Kiwi image
 
 . Click btn:[Begin Installation] to boot the new VM from the JeOS image.
 
-Proceed through the basic JeOS installation prompts until the command prompt wait for input.
+Follow the prompts to complete the basic JeOS installation, until the process is complete and the command prompt waits for input.
 
 During the basic installation prompts you are asked to enter the root password.
 In the next message box click btn:[Confirm root Password].
