--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -150,7 +150,8 @@ zypper in -t package yast2-storage-ng
 
 [NOTE]
 ====
-Storage size values are the absolute minimum—suitable only for a small test or demo installation (server and one client).
+Storage size values are the absolute minimum.
+They are suitable only for a small test or demonstration installation, such as a server with one client.
 Especially [path]``/var/spacewalk/`` may quickly need more space.
 Also consider to create a separate partition for [path]``/srv`` where Kiwi images are stored.
 ====
