--- a/modules/installation/pages/proxy-registration.adoc
+++ b/modules/installation/pages/proxy-registration.adoc
@@ -56,7 +56,7 @@ image::proxy-bootstrap.png[]
 . Create the SUSE Manager Tools Repository for bootstrapping, see xref:client-configuration:creating-a-tools-repository.adoc[Create Tools Repository].
 . Bootstrap the client with the bootstrap script.
 For more information, see xref:client-configuration:registration-bootstrap.adoc[].
-. In case of a Salt client, accept the key on the menu:Salt[Keys] page by clicking the check mark.
+. For Salt clients, accept the key on the menu:Salt[Keys] page by checking the appropriate checkbox.
 When accepted, it will appear in the menu:Systems[Overview].
 . Check via menu:System Details[Software > Software Channels] that the four proxy channels ([systemitem]``Pool`` and [systemitem]``Updates`` for [systemitem]``SLE-PRODUCT`` and [systemitem]``SLE-MODULE``) plus the recommended channels are selected.
 [systemitem]``SLE-PRODUCT-Pool`` must be the base channel and the others are child channels.
