--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -1,7 +1,7 @@
 [[proxy-setup]]
 = SUSE Manager Proxy Setup
 
-{productname} Proxy requires additional configuration to make it useful.
+{productname} Proxy requires additional configuration.
 
 
 ////
